--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.1"
