--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.1"
