--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@apollo/client": "^3.7.10",
     "@apollo/react-hooks": "^4.0.0",
     "apollo-server-express": "^3.12.0",
+    "crypto-browserify": "^3.12.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
